# TREX

./: .gitignore  .gitmodules  CITATION.cff  KNOWN-ISSUES.md  README.md  lldb-wrapper.sh  main.py  requirements.txt
containers/: README.md  containerRunner.py
containers/generic_deobfuscation/: README.md  gen_deob_runner.py
containers/grap/: README.md  graprunner.py
containers/ida/: README.md  idarunner.py
containers/lldb/: lldbrunner.py
containers/neo4j/: README.md  neo4jrunner.py
containers/pin/: README.md  sderunner.py  test.sh
containers/pin/sources/gen-deob/: CMakeLists.txt  README.md
containers/pin/sources/gen-deob/src/: .clang-format  InstructionTrace.cpp
containers/pin/sources/ins-counter/: .gitignore  CMakeLists.txt  README.md
containers/pin/sources/ins-counter/src/: counter.cpp
containers/pin/sources/instruction-values/: CMakeLists.txt  README.md
containers/pin/sources/instruction-values/src/: main.cpp
containers/pin/sources/instruction-values/test/: lit.cfg.in
containers/pin/sources/instruction-values/test/memory/: basic.cpp
containers/pin/sources/instruction-values/test/registers/: basic.cpp  small.cpp  xmm.cpp
containers/pin/sources/instruction-values/util/: pretty-print-csvs.py
containers/pin/sources/memory-instructions-profiler/: CMakeLists.txt  README.md
containers/pin/sources/memory-instructions-profiler/src/: main.cpp
containers/pin/sources/memory-instructions-profiler/test/: lit.cfg.in  num-bytes.cpp  num-executions.cpp  num-unique-byte-addresses.cpp  values-entropy.cpp  values.cpp
containers/pin/sources/memory-instructions-profiler/test/common/: memcopy.h
containers/pin/sources/memory-instructions-profiler/util/: pretty-print-csvs.py
core/: common_queries.txt  core.py  workspace.py
demos/coreutils/: Dockerfile  README.md  [  b2sum  base32  base64  basename  basenc  build.sh  cat  chcon  chgrp  chmod  chown  chroot  cksum  comm  cp  csplit  cut  date  dd  df  dir  dircolors  dirname  du  echo  env  expand  expr  factor  false  fmt  fold  groups  head  hostid  id  install  (+69 more)
demos/curl/: Dockerfile  README.md  build.sh  curl  demo.py  libcurl.so.4  libssl.so.1.1
demos/gpg/: Dockerfile  build.sh  demo.py  gen_deobf_input  gpg-agent  gpg_calls.csv  init.sh  interposer.c  (+3 more)
graph_models/: analysis.py  annotations.py  disassembly_analysis.py  grap_analysis.py
modules/: base_module.py  basic_block_profiler.py  branch_profiler.py  caballero.py  call_targets.py  data_dependencies.py  generic_deobfuscator.py  ida.py  instruction_info.py  instruction_values.py  lldb.py  memory_buffers.py  memory_instructions_profiler.py  memorymap.py  metrics.py  strings.py  syscall_trace.py  util.py  watchpointinator.py
neo4j_py2neo_bridge/: __init__.py
notebooks/: crypto_code.ipynb  evaluate-localisation.ipynb  khunt.ipynb  query-language.ipynb  util.py
plugins/: basic_block_matcher.py  csvIO.py  dotIO.py  instruction_matcher.py
query_language/: expressions.py  get_query.py  node_matchers.py  query.py  traversal_matchers.py
scripts/: interactive-data-deps-walk.py
(+196 files in other folders)
